--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -181,6 +181,9 @@ nav.navbar-default.navbar-static{
 
  }
 /*product page and checkout */
+
+
+
 img.img-product{
     width:100%;
 }
@@ -233,6 +236,10 @@ img.image_product_cart{
 
 
 /*.....Cart.......*/
+.checkout.col-md-12{
+    margin-bottom:40px;
+}
+
 #cart_container.container{
     background-color:rgba(0,0,0,0.47);
     margin-bottom:70px;
@@ -249,7 +256,7 @@ img.image_product_cart{
 #button_cart.btn{
     border-radius:50px;
 }
-.table{
+.table.table.table-bordered{
     width:40%;
     background-color:whitesmoke;
     float:right;
